force-app/main/default/objects/Task__c/fields/Agent_Extension__c.field-meta.xml
<CustomField>
    <fullName>Agent_Extension__c</fullName>
    <label>Agent Extension</label>
    <length>50</length>
    <type>Text</type>
</CustomField>