force-app/main/default/objects/Task__c/fields/Amount_To_Be_Paid_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Paid_In_Advance__c</fullName>
    <label>Amount To Be Paid In Advance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>