force-app/main/default/objects/Task__c/fields/Booking_Balance__c.field-meta.xml
<CustomField>
    <fullName>Booking_Balance__c</fullName>
    <label>Booking Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>