force-app/main/default/objects/Task__c/fields/Booking_Project__c.field-meta.xml
<CustomField>
    <fullName>Booking_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>