force-app/main/default/objects/Task__c/fields/Booking_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sale_Value__c</fullName>
    <label>Booking Sale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>