force-app/main/default/objects/Task__c/fields/Booking_Unit__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>