force-app/main/default/objects/Task__c/fields/Call_Disposition_L1__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_L1__c</fullName>
    <label>Call Disposition L1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance collections</fullName>
            </value>
            <value>
                <fullName>Dues collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>