force-app/main/default/objects/Task__c/fields/Call_Disposition_L2__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_L2__c</fullName>
    <label>Call Disposition L2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Disposition_L1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPV benefit Customer interested</fullName>
            </value>
            <value>
                <fullName>Not interested in NPV</fullName>
            </value>
            <value>
                <fullName>NPV dispute</fullName>
            </value>
            <value>
                <fullName>Non NPV disputes</fullName>
            </value>
            <value>
                <fullName>PCC</fullName>
            </value>
            <value>
                <fullName>No contact / unable to reach</fullName>
            </value>
            <value>
                <fullName>PTP</fullName>
            </value>
            <value>
                <fullName>SPA/pre-reg required by customer</fullName>
            </value>
            <value>
                <fullName>Adjustment/transfer funds</fullName>
            </value>
            <value>
                <fullName>Paid not realised in SOA</fullName>
            </value>
            <value>
                <fullName>Cancellation/termination</fullName>
            </value>
            <value>
                <fullName>New sales overdue</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Disputes / delays / deviation case</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>3rd party payments representative</fullName>
            </value>
            <value>
                <fullName>Fraud related</fullName>
            </value>
            <value>
                <fullName>Call Transfer / Case transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>