force-app/main/default/objects/Task__c/fields/Call_Disposition_L3__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_L3__c</fullName>
    <label>Call Disposition L3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Disposition_L2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single unit advance</fullName>
            </value>
            <value>
                <fullName>Multiple units advance payment</fullName>
            </value>
            <value>
                <fullName>PTP this month</fullName>
            </value>
            <value>
                <fullName>PTP this week</fullName>
            </value>
            <value>
                <fullName>call back yes</fullName>
            </value>
            <value>
                <fullName>call back no</fullName>
            </value>
            <value>
                <fullName>Excess commitments to customer</fullName>
            </value>
            <value>
                <fullName>Customer misunderstanding NPV benefit</fullName>
            </value>
            <value>
                <fullName>False communication via sales / brokers</fullName>
            </value>
            <value>
                <fullName>LP related</fullName>
            </value>
            <value>
                <fullName>booking related</fullName>
            </value>
            <value>
                <fullName>Call Transfer / Case transfer</fullName>
            </value>
            <value>
                <fullName>Resale SOA dispute</fullName>
            </value>
            <value>
                <fullName>Customer finalising bank for mortgage</fullName>
            </value>
            <value>
                <fullName>NPV interested customer</fullName>
            </value>
            <value>
                <fullName>Pre-approval / Offer letter received</fullName>
            </value>
            <value>
                <fullName>100% payments shortfall</fullName>
            </value>
            <value>
                <fullName>excess amounts refund related</fullName>
            </value>
            <value>
                <fullName>PTP next month</fullName>
            </value>
            <value>
                <fullName>call back request</fullName>
            </value>
            <value>
                <fullName>3rd party payments representative</fullName>
            </value>
            <value>
                <fullName>SPA required</fullName>
            </value>
            <value>
                <fullName>Discrepancy in SPA</fullName>
            </value>
            <value>
                <fullName>Oqood pending</fullName>
            </value>
            <value>
                <fullName>Oqood document requested</fullName>
            </value>
            <value>
                <fullName>Incorrect escrow payments - transfer requested</fullName>
            </value>
            <value>
                <fullName>Cancel-swap movement of funds</fullName>
            </value>
            <value>
                <fullName>cancel-refund requested</fullName>
            </value>
            <value>
                <fullName>Re-allocation of funds - different units</fullName>
            </value>
            <value>
                <fullName>Re-allocation of funds -within same SOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>