force-app/main/default/objects/Task__c/fields/Call_Hold_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Hold_Duration__c</fullName>
    <description>In seconds</description>
    <label>Call Hold Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>