force-app/main/default/objects/Task__c/fields/Call_Recording_Url__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Url__c</fullName>
    <label>Recording Link</label>
    <type>Url</type>
</CustomField>