force-app/main/default/objects/Task__c/fields/Calling_Agent__c.field-meta.xml
<CustomField>
    <fullName>Calling_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Details</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>