force-app/main/default/objects/Task__c/fields/Calling_Agent_Department__c.field-meta.xml
<CustomField>
    <fullName>Calling_Agent_Department__c</fullName>
    <formula>Calling_Agent__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calling Agent Department</label>
    <type>Text</type>
</CustomField>