force-app/main/default/objects/Task__c/fields/Calling_ID__c.field-meta.xml
<CustomField>
    <fullName>Calling_ID__c</fullName>
    <externalId>true</externalId>
    <label>Calling ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>