force-app/main/default/objects/Task__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PTP</fullName>
            </value>
            <value>
                <fullName>No Contact / Unable to Reach</fullName>
            </value>
            <value>
                <fullName>Raise for Cancellation</fullName>
            </value>
            <value>
                <fullName>Adjustment Pending / Rebate Pending</fullName>
            </value>
            <value>
                <fullName>Paid But Not Realized</fullName>
            </value>
            <value>
                <fullName>Regular Follow Up</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Unable to Pay</fullName>
            </value>
            <value>
                <fullName>SPA / DLD Not Done</fullName>
            </value>
            <value>
                <fullName>Swap / Upgrade</fullName>
            </value>
            <value>
                <fullName>Not Pitched</fullName>
            </value>
            <value>
                <fullName>Customer Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>