force-app/main/default/objects/Task__c/fields/Communication_Mode__c.field-meta.xml
<CustomField>
    <fullName>Communication_Mode__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
                <default>true</default>
                <label>Call</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Face-To-Face</fullName>
                <isActive>false</isActive>
                <label>Face-To-Face</label>
            </value>
            <value>
                <fullName>WeChat</fullName>
                <isActive>false</isActive>
                <label>WeChat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>