force-app/main/default/objects/Task__c/fields/CTI_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>CTI_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>CTI Unique Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>