force-app/main/default/objects/Task__c/fields/Customer_Interested__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interested__c</fullName>
    <label>Customer Interested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>