force-app/main/default/objects/Task__c/fields/Discount_On_Sale_Value_Without_VAT__c.field-meta.xml
<CustomField>
    <fullName>Discount_On_Sale_Value_Without_VAT__c</fullName>
    <label>Discount % On Sale Value Without VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>