force-app/main/default/objects/Task__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <inlineHelpText>In Seconds</inlineHelpText>
    <label>Disposition</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>