force-app/main/default/objects/Task__c/fields/Expected_Date_of_Receiving_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Receiving_Cheque__c</fullName>
    <label>Expected Date of Receiving Cheque</label>
    <type>Date</type>
</CustomField>