force-app/main/default/objects/Task__c/fields/Expected_Date_Of_The_Payment__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Of_The_Payment__c</fullName>
    <label>Expected Date Of The Payment</label>
    <type>Date</type>
</CustomField>