force-app/main/default/objects/Task__c/fields/Last_Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contacted_Date__c</fullName>
    <label>Last Contacted Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>