force-app/main/default/objects/Task__c/fields/Manual_Dial__c.field-meta.xml
<CustomField>
    <fullName>Manual_Dial__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manual Dial</label>
    <type>Checkbox</type>
</CustomField>