force-app/main/default/objects/Task__c/fields/PTP_Date__c.field-meta.xml
<CustomField>
    <fullName>PTP_Date__c</fullName>
    <label>PTP Date</label>
    <type>Date</type>
</CustomField>