force-app/main/default/objects/Task__c/fields/Q1_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>Q1_CSAT_Score__c</fullName>
    <label>Q1 CSAT Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>