force-app/main/default/objects/Task__c/fields/Q2_CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>Q2_CSAT_Score__c</fullName>
    <label>Q2 CSAT Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>