force-app/main/default/objects/Task__c/recordTypes/Collection.recordType-meta.xml
<RecordType>
    <fullName>Collection</fullName>
    <active>true</active>
    <label>Collection</label>
</RecordType>