force-app/main/default/objects/Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Calling_Agent__c</columns>
    <columns>Booking__c</columns>
    <columns>Unit_No__c</columns>
    <columns>Call_Duration__c</columns>
    <columns>Call_Hold_Duration__c</columns>
    <columns>Call_Recording_Url__c</columns>
    <columns>Call_Status__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>