force-app/main/default/objects/Task__c/listViews/StandLead_TelesalesAgent_Task.listView-meta.xml
<ListView>
    <fullName>StandLead_TelesalesAgent_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>StandLead_TelesalesAgent</label>
    <queue>StandLead_TelesalesAgent</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>