force-app/main/default/objects/Task__c/listViews/Telesales_Agent_Task.listView-meta.xml
<ListView>
    <fullName>Telesales_Agent_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Telesales Agent</label>
    <queue>Telesales_Agent</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>